--- a/main.html
+++ b/main.html
@@ -1,74 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta author="Franklin Ominyi" />
-    <meta name="keywords" content="Jamb Rapid Test, Jamb CBT" />
-    <meta name="robots" content="index,follow" />
-    <link rel="stylesheet" href="style.css" />
-    <title>JAMB CBT | Developed by Frank</title>
-  </head>
-  <body>
-    <noscript>Your current browser does not support Javascript.</noscript>
+ <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta author="Franklin Ominyi" />
+  <meta name="keywords" content="Jamb Rapid Test, Jamb CBT" />
+  <meta name="robots" content="index,follow" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <title>JAMB CBT | Developed by Frank</title>
+ </head>
+ <body>
+  <noscript>Your current browser does not support Javascript.</noscript>
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">×</span>
-        <p class="p-tag"></p>
-        <span class="scoreDom"></span><br />
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+   <!-- Modal content -->
+   <div class="modal-content">
+    <span class="close">×</span>
+    <p class="p-tag">Are you sure you want to submit?</p>
+    <span class="scoreDom"></span><br />
 
-        <button class="btn-modal"></button>
-        <button class="btn-modal"></button>
-      </div>
+    <button class="btn-modal">Yes</button>
+    <button class="btn-modal">No</button>
+   </div>
+  </div>
+
+  <div id="result-modal" class="result-modal">
+   <!-- Modal content -->
+   <div class="result-content">
+    <table>
+     <tr>
+      <th>Subject</th>
+      <th>Number of correct answers</th>
+      <th>Score</th>
+     </tr>
+     <tr>
+      <td>Biology</td>
+      <td id="scorenum0"></td>
+      <td id="score0"></td>
+     </tr>
+
+     <tr>
+      <td>Chemistry</td>
+      <td id="scorenum1"></td>
+      <td id="score1"></td>
+     </tr>
+
+     <tr>
+      <td>Physics</td>
+      <td id="scorenum2"></td>
+      <td id="score2"></td>
+     </tr>
+
+     <tr style="font-weight: bold">
+      <td>Total</td>
+      <td id="totalnum">40</td>
+      <td id="totalscore">300</td>
+     </tr>
+    </table>
+    <button class="result btn-modal">Write Again</button>
+    <button class="result btn-modal">Exit</button>
+   </div>
+  </div>
+  <header>
+   <h4>Jamb Rapid Test</h4>
+   <!-- <span></span> -->
+  </header>
+  <main>
+   <button class="choose">Biology</button>
+   <button class="choose">Chemistry</button>
+   <button class="choose">Physics</button>
+   <span class="countDom">00</span>:<span class="countDom">00</span>
+   <button class="submit">SUBMIT</button>
+   <br /><br />
+   <div class="question-container">
+    <span class="quesNum"></span><span class="ques"></span>
+   </div>
+   <form id="first" action="" name="myForm">
+    <div class="flex">
+     <input type="radio" id="opt0" name="q1" value="0" /><span
+      class="opt"
+     ></span
+     ><br />
     </div>
-    <header>
-      <h4>Jamb Rapid Test</h4>
-      <!-- <span></span> -->
-    </header>
-    <main>
-      <button class="choose">Biology</button>
-      <button class="choose">Chemistry</button>
-      <button class="choose">Physics</button>
-      <span class="countDom">00</span>:<span class="countDom">00</span>
-      <button class="submit" onclick="submit()">SUBMIT</button>
-      <br /><br />
-      <span class="quesNum"></span><span class="ques"></span>
-      <form id="first" action="" name="myForm">
-        <input type="radio" id="opt0" name="q1" value="0" /><span
-          class="opt"
-        ></span
-        ><br />
-        <input type="radio" id="opt1" name="q1" value="1" /><span
-          class="opt"
-        ></span
-        ><br />
-        <input type="radio" id="opt2" name="q1" value="2" /><span
-          class="opt"
-        ></span
-        ><br />
-        <input type="radio" id="opt3" name="q1" value="3" /><span
-          class="opt"
-        ></span
-        ><br />
-        <button type="button" class="btn">Previous</button
-        ><button type="button" class="btn">Next</button>
-      </form>
-    </main>
+    <div class="flex">
+     <input type="radio" id="opt1" name="q1" value="1" /><span
+      class="opt"
+     ></span
+     ><br />
+    </div>
+    <div class="flex">
+     <input type="radio" id="opt2" name="q1" value="2" /><span
+      class="opt"
+     ></span
+     ><br />
+    </div>
+    <div class="flex">
+     <input type="radio" id="opt3" name="q1" value="3" /><span
+      class="opt"
+     ></span
+     ><br />
+    </div>
 
-    <div id="num"></div>
+    <button type="button" class="btn">Previous</button
+    ><button type="button" class="btn">Next</button>
+   </form>
+  </main>
 
-    <div class="" id="footer">
-      <pre>
-   All Rights Reserved &copy; 2021 
+  <div id="num"></div>
+
+  <div class="" id="footer">
+   <pre>
+   All Rights Reserved &copy;2022
    Proudly Powered by <a href="https://frankofficial.netlify.com" style="text-decoration: none; color: blue;">Chitech-Group 
     (Developed by Frank)</a>   
    Call: +2347015734237
   </pre>
-    </div>
-    <script src="script.js"></script>
-  </body>
+  </div>
+  <script type="module" src="js/script.js"></script>
+ </body>
 </html>
